--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
 </head>
+
 <body>
-    
+    <nav class=" w-[99%]  m-auto bg-cover bg-no-repeat text-[#FFFFFF] p-5   bg-gradient-to-t from-[#07000e] to-[#0900000e] bg-[url(./first.jpg)]">
+        <div class="flex items-center justify-evenly p-3 ">
+            <h3 class="font-Montserrat font-[700] text-[24px] text-[#FFFFFF]">Physionic</h3>
+            <div class="flex items-center gap-5">
+                <p>Home</p>
+                <p>Products</p>
+                <p>Pricing</p>
+                <p>Contact</p>
+            </div>
+            <button class="bg-[#23A6F0] text-white px-4 py-2 rounded flex items-center p-5 gap-5">Get Quote Now <img
+                    class="w-5" src="./Vector (1).png" alt=""></button>
+        </div>
+        <div class="flex items-center justify-around mt-[30px] p-10">
+            <div class=" flex flex-col items-start w-[50%]">
+                <h1 class="font-Montserrat font-[700] text-[48px] text-[#FFFFFF] text-start ">Meet the Best<br>
+                    Hospital</h1>
+                <p class="font-Montserrat font-[400] text-[16px] text-[#FFFFFF] text-start">We know how large
+                    objects will act,<br>
+                    but things on a small scale.
+                </p>
+                <div class="flex items-center justify-center gap-6 mt-8">
+                    <button
+                        class="bg-[#23A6F0] text-white border-2 border-white px-6 py-3 rounded-3xl flex items-center p-7 gap-5">Get
+                        Started</button>
+                    <button
+                        class="bg-transparent border-2 border-white text-white px-6 py-3 rounded-3xl flex items-center p-7 gap-5">Learn
+                        More </button>
+                </div>
+            </div>
+
+
+            <div class="bg-[white] w-[20%] text-[black] p-5">
+                <form class=" flex flex-col gap-4">
+                    <caption class="text-[32px] font-[bold]">Book Appointment</caption>
+                    <div class="flex flex-col gap-2">
+                        <label for="Name *">Name *</label>
+                        <input class="w-[90%] border border-black h-[50px] p-3 shadow-2xl" placeholder="Full Name * "
+                            type="text">
+                    </div>
+                    <div class="flex flex-col gap-2">
+                        <label for="Email address *">Email address *</label>
+                        <input class="w-[90%] border border-black h-[50px] p-3 shadow-2xl" placeholder="Email address *"
+                            type="email">
+                    </div>
+                    <div class="flex flex-col gap-2">
+                        <label for="Departement *">Departement *</label>
+                        <input class="w-[90%] border border-black h-[50px] p-3 shadow-2xl" type="text"
+                            placeholder="Select Departement *">
+                    </div>
+                    <div class="flex flex-col gap-2">
+                        <label for="Select Date *">Select Date *</label>
+                        <input class="w-[90%] border border-black h-[50px] p-3 shadow-2xl" type="date">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </nav>
 </body>
+
 </html>
