--- a/src/index.html
+++ b/src/index.html
@@ -173,6 +173,30 @@
                 </div>
             </div>
         </div>
+        <div class="max-w-[1440px] m-auto h-[1100px] lg:h-[700px]">
+            <h1 class="text-center text-[40px] font-semibold pt-[40px] lg:pt-[100px]">Leading Medicine</h1>
+            <div>
+                <p class="text-center pt-[20px]">Problems trying to resolve the conflict between <br>the two major realms of
+                    Classical physics: Newtonian mechanics </p>
+            </div>
+            <div class="flex flex-wrap justify-center pt-[50px] gap-[40px]">
+                <div class="w-[330px] h-[244px] border-[1px] border-solid border-[#8EC2F2] flex flex-col gap-5 p-8">
+                    <div><img src="./stars (1).png" alt=""></div>
+                    <p>Slate helps you see how many <br> more days you need to work to <br> reach your financial goal.</p>
+                    <div><img src="./Frame 2 (1).png" alt=""></div>
+                </div>
+                <div class="w-[330px] h-[244px] border-[1px] border-solid border-[#8EC2F2] flex flex-col gap-5 p-8">
+                    <div><img src="./stars (1).png" alt=""></div>
+                    <p>Slate helps you see how many <br> more days you need to work to <br> reach your financial goal.</p>
+                    <div><img src="./Frame 2 (3).png" alt=""></div>
+                </div>
+                <div class="w-[330px] h-[244px] border-[1px] border-solid border-[#8EC2F2] flex flex-col gap-5 p-8">
+                    <div><img src="./stars (1).png" alt=""></div>
+                    <p>Slate helps you see how many <br> more days you need to work to <br> reach your financial goal.</p>
+                    <div><img src="./Frame 2 (2).png" alt=""></div>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
