--- a/src/index.html
+++ b/src/index.html
@@ -197,6 +197,36 @@
                 </div>
             </div>
         </div>
+        <div class="max-w-[1440px] m-auto lg:h-[900px] h-[1450px] ">
+            <h1 class="text-center text-[40px] font-semibold pt-[40px] lg:pt-[100px]">FAQ</h1>
+            <div>
+                <p class="text-center pt-[20px]">Problems trying to resolve the conflict between <br>the two major realms of
+                    Classical physics: Newtonian mechanics </p>
+            </div>
+            <div class="flex justify-center pt-[50px] gap-12 flex-wrap">
+                <div class="w-[333px] h-[151px]  border-[1px] border-solid border-[#8EC2F2]">
+                    <div class="flex gap-4 p-5">
+                        <div><img src="./icn arrow-right icn-xs.png" alt=""></div>
+                        <h1 class="text-[16px] font-bold">the quick fox jumps over the <br> lazy dog</h1>
+                    </div>
+                    <p class="pl-11">Things on a very small scale <br>behave like nothing </p>
+                </div>
+                <div class="w-[333px] h-[151px]  border-[1px] border-solid border-[#8EC2F2]">
+                    <div class="flex gap-4 p-5">
+                        <div><img src="./icn arrow-right icn-xs.png" alt=""></div>
+                        <h1 class="text-[16px] font-bold">the quick fox jumps over the <br> lazy dog</h1>
+                    </div>
+                    <p class="pl-11">Things on a very small scale <br>behave like nothing </p>
+                </div>
+                <div class="w-[333px] h-[151px]  border-[1px] border-solid border-[#8EC2F2]">
+                    <div class="flex gap-4 p-5">
+                        <div><img src="./icn arrow-right icn-xs.png" alt=""></div>
+                        <h1 class="text-[16px] font-bold">the quick fox jumps over the <br> lazy dog</h1>
+                    </div>
+                    <p class="pl-11">Things on a very small scale <br>behave like nothing </p>
+                </div>
+        
+            </div>
 </body>
 
 </html>
