--- a/src/index.html
+++ b/src/index.html
@@ -303,6 +303,13 @@
                     </div>
                 </div>
             </div>
+            <div
+                class="max-w-[1440px] lg:h-[414px] h-[1000px] pl-[40px] lg:pl-0  m-auto lg:mt-[320px] mt-[1650px] lg:mt-0 flex flex-wrap lg:justify-around  lg:pt-[100px]">
+                <div class="w-[80%] lg:w-[250px] flex flex-col gap-4">
+                    <h1 class="text-[24px] font-bold">Get In Touch</h1>
+                    <p>the quick fox jumps over the <br>lazy dog</p>
+                    <div><img src="./social media.png" alt=""></div>
+                </div>
 </body>
 
 </html>
