--- a/src/index.html
+++ b/src/index.html
@@ -310,6 +310,13 @@
                     <p>the quick fox jumps over the <br>lazy dog</p>
                     <div><img src="./social media.png" alt=""></div>
                 </div>
+                <div class="w-[80%] lg:w-[200px] flex flex-col gap-4">
+                    <h1 class="text-[24px] font-bold">Company info</h1>
+                    <p>About Us</p>
+                    <p>Carrier</p>
+                    <p>We are hiring</p>
+                    <p>Blog</p>
+                </div>
 </body>
 
 </html>
