--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="max-w-[1440px] m-auto h-[817px]  lg:bg-[url(www.png)] m-auto bg-center lg:bg-center bg-no-repeat    ">
-        <div class="text-white flex items-center justify-around">
+        <div class="text-white flex items-center justify-around p-5">
             <h1 class="text-[24px] lg:text-white text-black">Physionic</h1>
             <div class="lg:w-[815px] lg:flex hidden lg:m-0  lg:items-center lg:flex lg:justify-between">
                 <div class="lg:flex lg:gap-[21px]">
